--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1009,32 +1009,7 @@ title: "Заголовок | Проект",
   </section>
 
 
-  <section class="main-page__questions-form questions-form-block questions-form-block--wide">
-    <div class="questions-form-block__inner">
-      <div class="questions-form-block__info">
-        <div class="questions-form-block__title">
-          Остались вопросы?
-        </div>
-        <div class="questions-form-block__text">
-          Воспользуйтесь формой заказа обратного звонка
-          или задайте вопрос в чате нашему специалисту. Мы будем рады вам помочь!
-        </div>
-      </div>
-      <div class="questions-form-block__form questions-form">
-        <div class="questions-form__inner">
-          <input type="text"
-                 placeholder="Ваш номер телефона"
-                 class="questions-form__field">
-          <button type="button"
-                  class="questions-form__btn">Позвоните мне!
-          </button>
-        </div>
-        <div class="questions-form__agree">
-          Здесь согласие))) Взять из форм
-        </div>
-      </div>
-    </div>
-  </section>
+  <%= _.template(require('./../includes/questions-form-block.html'). default)(data) %>
 
 
 </div>
