--- a/src/html/views/product.html
+++ b/src/html/views/product.html
@@ -16,25 +16,25 @@ title: "Заголовок | Проект",
         <div class="images-product">
           <div class="swiper-container images-product__container">
             <div class="swiper-wrapper images-product__wrapper">
-              <a href="uploads/product-detail/1.jpg"
+              <a href="uploads/product/1.png"
                  class="swiper-slide images-product__slide"
                  data-fancybox>
                 <img src="uploads/product/1.png"
                      alt="">
               </a>
-              <a href="uploads/product-detail/1.jpg"
+              <a href="uploads/product/1.png"
                  class="swiper-slide images-product__slide"
                  data-fancybox>
                 <img src="uploads/product/1.png"
                      alt="">
               </a>
-              <a href="uploads/product-detail/1.jpg"
+              <a href="uploads/product/1.png"
                  class="swiper-slide images-product__slide"
                  data-fancybox>
                 <img src="uploads/product/1.png "
                      alt="">
               </a>
-              <a href="uploads/product-detail/1.jpg"
+              <a href="uploads/product/1.pngg"
                  class="swiper-slide images-product__slide"
                  data-fancybox>
                 <img src="uploads/product/1.png "
@@ -52,7 +52,7 @@ title: "Заголовок | Проект",
                      alt="">
               </div>
               <div class="swiper-slide images-product-thumbs__slide">
-                <img src="uploads/product/1.png"
+                <img src="uploads/product/1.png "
                      alt="">
               </div>
               <div class="swiper-slide images-product-thumbs__slide">
@@ -116,20 +116,54 @@ title: "Заголовок | Проект",
         <div class="info-product__props props-product">
           <div class="props-product__item">
             <div class="props-product__title">Размеры спального места:</div>
-            <div class="props-product__field">
+            <div class="props-product__field" onclick="this.classList.toggle('props-product__field--open')">
               <div class="props-product__icon">
-                <img src=""
+                <img src="img/detail-product/props-product-icon/1.png"
                      alt="">
               </div>
               <div class="props-product__name">90x100</div>
               <div class="props-product__price">7 170 руб.</div>
+            </div>
+            <div class="props-product__list list-props-product">
+              <div class="list-props-product__item">
+                <div class="list-props-product__icon">
+                  <img src="img/detail-product/props-product-icon/1.png"
+                       alt="">
+                </div>
+                <div class="list-props-product__name">100x100</div>
+                <div class="list-props-product__price">12 970 руб.</div>
+              </div>
+              <div class="list-props-product__item">
+                <div class="list-props-product__icon">
+                  <img src="img/detail-product/props-product-icon/1.png"
+                       alt="">
+                </div>
+                <div class="list-props-product__name">100x100</div>
+                <div class="list-props-product__price">12 970 руб.</div>
+              </div>
+              <div class="list-props-product__item">
+                <div class="list-props-product__icon">
+                  <img src="img/detail-product/props-product-icon/1.png"
+                       alt="">
+                </div>
+                <div class="list-props-product__name">100x100</div>
+                <div class="list-props-product__price">12 970 руб.</div>
+              </div>
+              <div class="list-props-product__item">
+                <div class="list-props-product__icon">
+                  <img src="img/detail-product/props-product-icon/1.png"
+                       alt="">
+                </div>
+                <div class="list-props-product__name">100x100</div>
+                <div class="list-props-product__price">12 970 руб.</div>
+              </div>
             </div>
           </div>
           <div class="props-product__item">
             <div class="props-product__title">Основание:</div>
             <div class="props-product__field">
               <div class="props-product__icon">
-                <img src=""
+                <img src="img/detail-product/props-product-icon/2.png"
                      alt="">
               </div>
               <div class="props-product__name">Базовое</div>
@@ -140,10 +174,65 @@ title: "Заголовок | Проект",
             <div class="props-product__title">Выберите цвет эко-кожи:</div>
             <div class="props-product__field">
               <div class="props-product__icon">
-                <img src=""
+                <img src="img/detail-product/props-product-icon/none.png"
                      alt="">
               </div>
               <div class="props-product__name">Не выбрано</div>
+              <div class="props-product__price">0 руб.</div>
+            </div>
+          </div>
+          <div class="props-product__item">
+            <div class="props-product__title">Ножная спинка кровати:</div>
+            <div class="props-product__field">
+              <div class="props-product__icon">
+                <img src="img/detail-product/props-product-icon/3.png"
+                     alt="">
+              </div>
+              <div class="props-product__name">Ниже матраса</div>
+              <div class="props-product__price">0 руб.</div>
+            </div>
+          </div>
+          <div class="props-product__item">
+            <div class="props-product__title">Материал кровати:</div>
+            <div class="props-product__field">
+              <div class="props-product__icon">
+                <img src="img/detail-product/props-product-icon/4.png"
+                     alt="">
+              </div>
+              <div class="props-product__name">Сосна</div>
+              <div class="props-product__price">0 руб.</div>
+            </div>
+          </div>
+          <div class="props-product__item">
+            <div class="props-product__title">Выберите цвет:</div>
+            <div class="props-product__field">
+              <div class="props-product__icon">
+                <img src="img/detail-product/props-product-icon/5.png"
+                     alt="">
+              </div>
+              <div class="props-product__name">Прозрачный лак</div>
+              <div class="props-product__price">0 руб.</div>
+            </div>
+          </div>
+          <div class="props-product__item">
+            <div class="props-product__title">Подъёмный механизм и ящики:</div>
+            <div class="props-product__field">
+              <div class="props-product__icon">
+                <img src="img/detail-product/props-product-icon/none.png"
+                     alt="">
+              </div>
+              <div class="props-product__name">Нет</div>
+              <div class="props-product__price">0 руб.</div>
+            </div>
+          </div>
+          <div class="props-product__item">
+            <div class="props-product__title">Выберите матрас:</div>
+            <div class="props-product__field">
+              <div class="props-product__icon">
+                <img src="img/detail-product/props-product-icon/none.png"
+                     alt="">
+              </div>
+              <div class="props-product__name">Нет</div>
               <div class="props-product__price">0 руб.</div>
             </div>
           </div>
@@ -152,7 +241,12 @@ title: "Заголовок | Проект",
 
 
         <div class="info-product__actions">
-          <button class="info-product__add-to-cart btn btn--fill btn--green">В корзину
+          <button class="info-product__add-to-cart btn btn--fill btn--green">
+            <svg width="30"
+                 height="30">
+              <use xlink:href="img/spritemap.svg#sprite-product-add-to-cart"></use>
+            </svg>
+            В корзину
           </button>
           <button class="info-product__one-click btn btn--fill btn--green">Купить в 1 клик
           </button>
@@ -166,7 +260,20 @@ title: "Заголовок | Проект",
   </div>
 
   <div class="product__footer">
-    табы Ёпта
+    <div class="product__tabs tabs">
+    <div class="tabs__header">
+      <div class="tabs__item" data-tab-target="tab1">Описание</div>
+      <div class="tabs__item" data-tab-target="tab2">Характеристики</div>
+      <div class="tabs__item" data-tab-target="tab3">Отзывы</div>
+      <div class="tabs__item" data-tab-target="tab4">Доставка и оплата</div>
+    </div>
+    <div class="tabs__contents">
+      <div class="tabs__content" data-tab="tab1">1111</div>
+      <div class="tabs__content" data-tab="tab2">2222</div>
+      <div class="tabs__content" data-tab="tab3">3333</div>
+      <div class="tabs__content" data-tab="tab4">4444</div>
+    </div>
+    </div>
   </div>
   <div class="product__order-delivery order-delivery-product">
     <div class="order-delivery-product__title">
@@ -211,6 +318,8 @@ title: "Заголовок | Проект",
       </div>
     </div>
   </div>
+
+  <%= _.template(require('./../includes/questions-form-block.html'). default)(data) %>
 
 
 </div>
