--- a/src/html/includes/questions-form-block.html
+++ b/src/html/includes/questions-form-block.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<section class="product__questions-form questions-form-block questions-form-block--wide">
+  <div class="questions-form-block__inner">
+    <div class="questions-form-block__info">
+      <div class="questions-form-block__title">
+        Остались вопросы?
+      </div>
+      <div class="questions-form-block__text">
+        Воспользуйтесь формой заказа обратного звонка
+        или задайте вопрос в чате нашему специалисту. Мы будем рады вам помочь!
+      </div>
+    </div>
+    <div class="questions-form-block__form questions-form">
+      <div class="questions-form__inner">
+        <input type="text"
+               placeholder="Ваш номер телефона"
+               class="questions-form__field">
+        <button type="button"
+                class="questions-form__btn">Позвоните мне!
+        </button>
+      </div>
+      <div class="questions-form__agree">
+        Здесь согласие))) Взять из форм
+      </div>
+    </div>
+  </div>
+</section>
