--- a/src/html/views/product.html
+++ b/src/html/views/product.html
@@ -262,16 +262,16 @@ title: "Заголовок | Проект",
   <div class="product__footer">
     <div class="product__tabs tabs">
     <div class="tabs__header">
-      <div class="tabs__item" data-tab-target="tab1">Описание</div>
-      <div class="tabs__item" data-tab-target="tab2">Характеристики</div>
-      <div class="tabs__item" data-tab-target="tab3">Отзывы</div>
-      <div class="tabs__item" data-tab-target="tab4">Доставка и оплата</div>
+      <div class="tabs__tab" data-tab-target="tab1">Описание</div>
+      <div class="tabs__tab" data-tab-target="tab2">Характеристики</div>
+      <div class="tabs__tab" data-tab-target="tab3">Отзывы</div>
+      <div class="tabs__tab" data-tab-target="tab4">Доставка и оплата</div>
     </div>
     <div class="tabs__contents">
       <div class="tabs__content" data-tab="tab1">1111</div>
-      <div class="tabs__content" data-tab="tab2">2222</div>
-      <div class="tabs__content" data-tab="tab3">3333</div>
-      <div class="tabs__content" data-tab="tab4">4444</div>
+      <div class="tabs__content" data-tab="tab2" hidden>2222</div>
+      <div class="tabs__content" data-tab="tab3" hidden>3333</div>
+      <div class="tabs__content" data-tab="tab4" hidden>4444</div>
     </div>
     </div>
   </div>
