--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -140,10 +140,8 @@ a {
 .swiper-button-next {
   position            : absolute;
   z-index             : 999;
-  top                 : 50%;
   width               : 35px;
   height              : 36px;
-  margin-top          : -18px;
   cursor              : pointer;
   background-color    : #00cc52;
   background-repeat   : no-repeat;
@@ -157,17 +155,20 @@ a {
 }
 
 .swiper-button-prev {
-  left             : -50px;
+
   border-radius    : 5px 0 0 5px;
   background-image : url(../img/svg/slider-arrow-left.svg);
 }
 
 .swiper-button-next {
-  right            : -50px;
+
   border-radius    : 0 5px 5px 0;
   background-image : url(../img/svg/slider-arrow-right.svg);
 }
 
+.swiper-button-disabled {
+  opacity : 0.5;
+}
 
 .block {
   // .block__title
@@ -240,13 +241,16 @@ a {
   // .products-slider__btn
   &__btn {
     position : absolute;
+    top : 200px;
 
     // .products-slider__btn--prev
     &--prev {
+      left             : -50px;
     }
 
     // .products-slider__btn--next
     &--next {
+      right            : -50px;
     }
   }
 }
