--- a/src/html/views/product.html
+++ b/src/html/views/product.html
@@ -263,23 +263,24 @@ title: "Заголовок | Проект",
   </div>
 
   <div class="product__footer">
-    <div class="product__tabs tabs">
-      <div class="tabs__header">
-        <div class="tabs__tab tabs__tab--active"
+    <div class="product__tabs tabs-product">
+      <div class="tabs-product__header">
+        <div class="tabs-product__tab active"
              data-tab-target="tab1">Описание
         </div>
-        <div class="tabs__tab"
+        <div class="tabs-product__tab"
              data-tab-target="tab2">Характеристики
         </div>
-        <div class="tabs__tab"
+        <div class="tabs-product__tab"
              data-tab-target="tab3">Отзывы
         </div>
-        <div class="tabs__tab"
+        <div class="tabs-product__tab"
              data-tab-target="tab4">Доставка и оплата
         </div>
       </div>
-      <div class="tabs__contents">
-        <div class="tabs__content"
+      <div class="tabs-product__contents">
+
+        <div class="tabs-product__content"
              data-tab="tab1">
           <div class="info-product__description">
             <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет оценить значение форм развития. </p>
@@ -287,7 +288,7 @@ title: "Заголовок | Проект",
           </div>
 
         </div>
-        <div class="tabs__content"
+        <div class="tabs-product__content"
              data-tab="tab2"
              hidden>
 
@@ -328,8 +329,7 @@ title: "Заголовок | Проект",
           </div>
 
         </div>
-
-        <div class="tabs__content"
+        <div class="tabs-product__content"
              data-tab="tab3"
              hidden>
           <div class="info-product__reviews reviews-product">
@@ -416,9 +416,7 @@ title: "Заголовок | Проект",
           </div>
 
         </div>
-
-
-        <div class="tabs__content"
+        <div class="tabs-product__content"
              data-tab="tab4"
              hidden>
 
@@ -462,6 +460,7 @@ title: "Заголовок | Проект",
           </div>
 
         </div>
+
       </div>
     </div>
   </div>
